[package]
name = "lswtss-open-modding-platform-bundle-dev-tools"
version = "1.0.0"
edition = "2018"

[dependencies]
clap = { version = "^4.0.0", features = ["cargo"] }
lswtss-open-modding-platform-foundation = { path = "../foundation" }
schemars = "^0.8.0"
serde = "^1.0.0"
serde_json = "^1.0.0"
sysinfo = "^0.30.0"
