[package]
name = "lswtss-open-modding-platform-driver-library"
version = "0.2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
uuid = { version = "^1.0.0", features = ["v5"] }
deno_runtime = { version = "^0.137.0", features = [] }
detour = { version = "^0.8.0", default_features = false }
lazy_static = "^1.0.0"
log = "^0.4.0"
lswtss-open-modding-platform-foundation = { path = "../foundation" }
schemars = "^0.8.0"
serde = "^1.0.0"
serde_json = "^1.0.0"
simplelog = "^0.12.0"
tokio = { version = "^1.0.0", features = ["full"] }
winapi = { version = "^0.3.0", features = [
  "libloaderapi",
  "minwindef",
  "winnt",
] }
