[package]
name = "lswtss-open-modding-platform-mod-bootstrapper"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = "0.25.0"
lswtss-open-modding-platform-foundation = { path = "../foundation" }
lswtss-open-modding-platform-mod-bootstrapper-core = { path = "../mod-bootstrapper-core" }
rfd = "0.13.0"
serde = "^1.0.0"
serde_json = "^1.0.0"
